[package]
name = "ptymux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.1"
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
directories = "4.0.1"
makiko = "0.2.1"
smol = "1.3.0"
termion = "2.0.1"
